fix(local-nav-link): wrap text by default (#47)

--- a/src/components/global/localNav/localNavLink.scss
+++ b/src/components/global/localNav/localNavLink.scss
@@ -7,8 +7,9 @@
 a {
   display: flex;
   align-items: center;
-  height: 40px;
-  padding: 10px;
+  gap: 8px;
+  min-height: 32px;
+  padding: 6px 10px;
   border-radius: 4px;
   text-decoration: none;
   outline: 2px solid transparent;
@@ -104,7 +105,7 @@ li {
     border-radius: 4px;
 
     & a {
-      padding-left: 32px;
+      padding-left: 38px;
     }
   }
 
@@ -112,17 +113,14 @@ li {
     padding: 0 4px;
 
     & a {
-      padding-left: 50px;
+      padding-left: 34px;
     }
   }
 }
 
 .text {
   display: none;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  margin-left: 8px;
+  min-width: 156px;
 
   .nav-expanded & {
     display: block;
